- Choice dialog windows are now no longer closable by pressing on the outside.  - The purchase dialog window will now update when you finish purchasing an item.  - Purchasing bot skins has been enabled.  - Purchased bot skins will now show a "bought" overlay when purchased.  - Starting to implement create account dialog.  - Login dialog now has a create account button (graphic temporary - it's too small right now).  - Login dialog has been moved up slightly to account for keyboard on smaller devices.  - You can no longer use special characters except in passwords and email fields.  - Scripts and levels moved to new identifier com.gearsprout.chuckthebot.  - The create user script now allows for email addresses.  - Added logout functionality.  - Checking for the full version should now always return the correct value instead of the value on startup.  - The free version should now use the same level and purchase location as the pro version.  - Added logout button to main menu.  - The purchase manager will now no longer try to download files for the in-app purchases and will display the correct completion message.  - You will now be booted back to the level selection scene upon completing level 15 on the free version.  - The stage selection screen will prompt free users to upgrade if they have reached level 15.  - Added shadowed text to loading screen text instead of older default text field and randomised message.  - Removed tag filter and adjusted positions of filter buttons to accommodate.

--- a/Source/Chuck the Bot (iOS) copy-Info.plist
+++ b/Source/Chuck the Bot (iOS) copy-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Chuck the Bot (Pro)</string>
+	<string>Chuck the Bot</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
@@ -20,11 +20,11 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.gearsprout.chuckthebot</string>
+	<string>com.gearsprout.chuckthebotfree</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Chuck the Bot (Pro)</string>
+	<string>Chuck the Bot</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
