--- a/Source/chucktherobot/Resources/Info.plist
+++ b/Source/chucktherobot/Resources/Info.plist
@@ -20,7 +20,7 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.gearsprout.chuckthebot</string>
+	<string>com.gearsprout.chuckthebotpro</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
