--- a/Source/Chuck the Bot (iOS) copy-Info.plist
+++ b/Source/Chuck the Bot (iOS) copy-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Chuck the Bot (Free)</string>
+	<string>Chuck the Bot</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
@@ -20,11 +20,11 @@
 		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.gearsprout.chuckthebotfree</string>
+	<string>com.gearsprout.chuckthebot</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Chuck the Bot (Free)</string>
+	<string>Chuck the Bot</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
