--- a/Source/chucktherobot/Resources/Info.plist
+++ b/Source/chucktherobot/Resources/Info.plist
@@ -12,19 +12,32 @@
 	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-		<string>Icon-72.png</string>
-		<string>Icon-Small-50.png</string>
-		<string>Icon-Small.png</string>
-		<string>Icon-Small@2x.png</string>
+		<string>Icon pro.png</string>
+		<string>Icon@2x pro.png</string>
+		<string>Icon-72@2x pro.png</string>
+		<string>Icon-72 pro.png</string>
 	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon pro.png</string>
+				<string>Icon@2x pro.png</string>
+				<string>Icon-72@2x pro.png</string>
+				<string>Icon-72 pro.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.gearsprout.chuckthebotpro</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Chuck the Bot</string>
+	<string>Chuck the Bot Pro</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
